...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Меню" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="HEu-Yv-ywC">
                        <barButtonItem key="backBarButtonItem" title="Меню" id="i5a-2n-lz3"/>
                    </navigationItem>
...
                                <rect key="frame" x="0.0" y="749.5" width="414" height="34.5"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Добавить в корзину"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="C3E-l3-WsT" eventType="touchUpInside" id="j8y-Bb-iHo"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Ваш Заказ" largeTitleDisplayMode="always" id="Mfv-HZ-NJa">
                        <barButtonItem key="backBarButtonItem" title="Заказ" id="Jsa-ZO-MDK"/>
                    </navigationItem>
                    <connections>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Инфо" id="DUd-pt-bS7" customClass="profile" customModule="MMM" customModuleProvider="target">
                        <barButtonItem key="rightBarButtonItem" title="Вход/Выход" id="YkK-3z-uz5">
                            <connections>
                                <segue destination="Vau-8E-fZQ" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="xdJ-15-ktw"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите номер" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="jHO-0u-jrP">
                                        <rect key="frame" x="179" y="294" width="182" height="34"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <color key="tintColor" systemColor="labelColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Войти">
                                            <backgroundConfiguration key="background" cornerRadius="5"/>
                                        </buttonConfiguration>
...
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Проверить код">
                                    <color key="baseForegroundColor" systemColor="systemBlueColor"/>
                                </buttonConfiguration>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bph-w1-kZc" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Прлофиль" image="brain.head.profile" catalog="system" id="Wcm-pn-FPo"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="MRw-5N-vxF">
...
