...
    @IBOutlet weak var Addd: UIButton!
    
    @IBOutlet weak var sostav: UITableView!
    
    /*
     
     let alert2 = UIAlertController(title: "Корзина пуста", message: "Вам неообходимо что-нибудь добавить в корзину", preferredStyle: UIAlertController.Style.alert)
     alert2.addAction(UIAlertAction(title: "Готово", style: UIAlertAction.Style.cancel, handler: nil))
     alert2.addAction(UIAlertAction(title: "Меню", style: UIAlertAction.Style.default, handler: { action in
         
         
         self.performSegue(withIdentifier: "unwindToEnter", sender: self)
         print("awesome")
...
